model running according to new intent

--- a/web page/templates/check.html
+++ b/web page/templates/check.html
@@ -247,7 +247,7 @@ input {
           <span class="foo-txt">
             <br>
             <font color="black">
-              Developed By Sameer Aggarwal for
+              Developed By Sameer Aggarwal & Pranjal Bhardwaj for
               DGI College </font>
           </span>
         </div>
